--- a/ssaddu-master/2.html
+++ b/ssaddu-master/2.html
@@ -3,59 +3,33 @@
   <head>
     <meta charset="utf-8">
     <title>나의 첫번째 웹</title>
-    <style media "screen">
-    .grid{
-      display: grid;
-      grid-template-columns: 150px 1fr;
-      border: 1px solid gray;
-    }
-    .navigation{
-       border-right: 1px solid gray;
-    }
-    </style>
-    <style>
-    a{
-      color:black;
-      text-decoration: underline;
-    }
-    @media (max-width:600px) {
-     .grid{
-      display: block;
-     }
-     .navigation{
-       border: none;
-     }
-     h1{
-       border-bottom: none;
-     }
-    }
-    h2{
-      font-size: 4em;
-    }
-    </style>
+  <link rel="stylesheet" href="mystyle.css">
   </head><h2><a href="index.html"><strong>내가 좋아하는 것들</strong></a></h2>
   <body>
     <div class="grid">
       <div class="navigation">
+        <h4>
         <ul>
-          <li><a href="1.html">여행</a><img src="flight.jpg" width="50" height="50" alt=""></li>
-          <li><p><a>영화</a><img src="movie.jfif" width="50" height="50" alt=""></p>
+        <li><a href="1.html">여행</a><img src="flight.jpg" width="70" height="70" alt=""></li>
+          <li><p><a>영화</a><img src="movie.jfif" width="70" height="70" alt=""></p>
              <p><a href="2.html">1.영화 </a> </p>
              <p><a href="4.html">2.영화</a></p>
           </li>
-          <li><a href="3.html">과일</a><img src="heart.jpg" width="50" height="50" alt=""></li>
+          <li><a href="3.html">과일</a><img src="heart.jpg" width="70" height="70" alt=""></li>
         </ul>
+      </h4>
       </div>
   <div class="article">
     <h1> 영화 </h1>
     <ul>
       <li>트와일라잇
         <p>*영화 속 OST*</p>
-        <p><img src="music.png" width="150" height="150" alt=""><iframe width="300" height="200" src="https://www.youtube.com/embed/FSqNp2F5YRo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+        <p><img src="music.png" width="150" height="150" alt=""></p>
+        <p><iframe width="560" height="315" src="https://www.youtube.com/embed/FSqNp2F5YRo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
         <p>아래 나온 사진은 개인적으로 가장 좋았던 장면인 이클립스의 마지막 장면으로 벨라의 안전을</p>
         <p>위해 떠났던  에드워드가 다시 돌아와 둘이 다시 재회하여 행복한 일상을 보내는 장면이다. </p>
         <p>이 장면에서 둘은 꽃밭을 배경으로 약간 흐릿하게 장면이 나오는데 볼 떄마다 너무 잘 찍었다는 생각이 든다.</p>
-        <p> <img src="twilight.jfif" width="100" height="70" alt=""></p>
+        <p> <img src="twilight.jfif" width="350" height="230" alt=""></p>
 
         <p><table style="width:100%" border="1" bordercolor="black";>
           <tr>
