--- a/ssaddu-master/3.html
+++ b/ssaddu-master/3.html
@@ -3,48 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>나의 첫번째 웹</title>
-    <style media "screen">
-    .grid{
-      display: grid;
-      grid-template-columns: 150px 1fr;
-      border: 1px solid gray;
-    }
-    .navigation{
-       border-right: 1px solid gray;
-    }
-    </style>
-    <style>
-    a{
-      color:black;
-      text-decoration: underline;
-    }
-    @media (max-width:600px) {
-     .grid{
-      display: block;
-     }
-     .navigation{
-       border: none;
-     }
-     h1{
-       border-bottom: none;
-     }
-    }
-    h2{
-      font-size: 4em;
-    }
-    </style>
+    <link rel="stylesheet" href="mystyle.css">
   </head><h2><a href="index.html"><strong>내가 좋아하는 것들</strong></a></h2>
   <body>
     <div class="grid">
       <div class="navigation">
+        <h4>
         <ul>
-          <li><a href="1.html">여행</a><img src="flight.jpg" width="50" height="50" alt=""></li>
-          <li><p><a>영화</a><img src="movie.jfif" width="50" height="50" alt=""></p>
+        <li><a href="1.html">여행</a><img src="flight.jpg" width="70" height="70" alt=""></li>
+          <li><p><a>영화</a><img src="movie.jfif" width="70" height="70" alt=""></p>
              <p><a href="2.html">1.영화 </a> </p>
              <p><a href="4.html">2.영화</a></p>
           </li>
-          <li><a href="3.html">과일</a><img src="heart.jpg" width="50" height="50" alt=""></li>
+          <li><a href="3.html">과일</a><img src="heart.jpg" width="70" height="70" alt=""></li>
         </ul>
+      </h4>
       </div>
         <div class="article">
    <h1> 과일 </h1>
