--- a/ssaddu-master/4.html
+++ b/ssaddu-master/4.html
@@ -3,51 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>나의 첫번째 웹</title>
-    <style media "screen">
-    .grid{
-      display: grid;
-      grid-template-columns: 150px 1fr;
-      border: 1px solid gray;
-    }
-    .navigation{
-       border-right: 1px solid gray;
-    }
-    a{
-      color:black;
-      text-decoration: underline;
-    }
-    @media (max-width:600px) {
-     .grid{
-      display: block;
-     }
-     .navigation{
-       border: none;
-     }
-     h1{
-       border-bottom: none;
-     }
-    }
-    a{
-      color:black;
-      text-decoration: underline;
-    }
-
-    h2{
-      font-size: 4em;
-    }
-    </style>
+    <link rel="stylesheet" href="mystyle.css">
   </head><h2><a href="index.html"><strong>내가 좋아하는 것들</strong></a></h2>
   <body>
     <div class="grid">
       <div class="navigation">
+        <h4>
         <ul>
-          <li><a href="1.html">여행</a><img src="flight.jpg" width="50" height="50" alt=""></li>
-          <li><p><a>영화</a><img src="movie.jfif" width="50" height="50" alt=""></p>
+        <li><a href="1.html">여행</a><img src="flight.jpg" width="70" height="70" alt=""></li>
+          <li><p><a>영화</a><img src="movie.jfif" width="70" height="70" alt=""></p>
              <p><a href="2.html">1.영화 </a> </p>
              <p><a href="4.html">2.영화</a></p>
           </li>
-          <li><a href="3.html">과일</a><img src="heart.jpg" width="50" height="50" alt=""></li>
+          <li><a href="3.html">과일</a><img src="heart.jpg" width="70" height="70" alt=""></li>
         </ul>
+      </h4>
       </div>
         <div class="article">
    <h1> 영화 </h1>
@@ -56,8 +26,8 @@
       <li><P>그레이의 50가지 그림자</p>
       <p>*영화 속 OST*</p>
       <p>의외로 띵곡들이 많다.</p>
-      <p><img src="fifty shades freed ost.jpg" width="70" height="70" alt=""><img src="music.png" width="70" height="70" alt=""><iframe width="80" height="70" src="https://www.youtube.com/embed/sVrSn_RxH_A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-      <p><img src="fifty shades of grey ost.jpg" width="70" height="70" alt=""><img src="music.png" width="70" height="70" alt=""><iframe width="80" height="70" src="https://www.youtube.com/embed/bgjUzhdmmF0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+      <p><img src="fifty shades freed ost.jpg" width="100" height="100" alt=""><img src="music.png" width="100" height="100" alt=""><iframe width="560" height="315" src="https://www.youtube.com/embed/sVrSn_RxH_A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+      <p><img src="fifty shades of grey ost.jpg" width="100" height="100" alt=""><img src="music.png" width="100" height="100" alt=""><iframe width="600" height="300" src="https://www.youtube.com/embed/bgjUzhdmmF0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
       <p>*가장 좋아하는 장면</p>
       <p><img src="scene 1.jpg" width="300" heigh="150" alt=""><img src="scene 2.jpg" widht="300" height="150" alt="">
       <p>물론 많은 야한 장면들이 많았지만 나는 그중에서도 두 장면이 가장 인상 깊었다.</p>
